--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ exclude = '''
 [tool.cibuildwheel]
 test-command = "pytest -nauto {project}/tests"
 test-extras = "test"
-skip = "cp36-*"
+skip = "cp36-* cp311-*"
 test-skip = "*_arm64 *_universal2:arm64"
 
 [tool.cibuildwheel.environment]
